Fix Galaxy launch crash and add in-app diagnostics