@@ -2,36 +2,34 @@ package com.derobertis.currantblackatlas;
 
 import android.app.Activity;
 import android.content.ActivityNotFoundException;
+import android.content.ClipData;
+import android.content.ClipboardManager;
+import android.content.Context;
 import android.content.Intent;
 import android.graphics.Color;
 import android.net.Uri;
-import android.os.Build;
 import android.os.Bundle;
-import android.provider.Settings;
-import android.view.View;
-import android.view.Window;
-import android.view.WindowInsets;
-import android.view.WindowInsetsController;
 import android.webkit.JavascriptInterface;
+import android.webkit.RenderProcessGoneDetail;
 import android.webkit.WebChromeClient;
 import android.webkit.WebResourceRequest;
-import android.webkit.WebResourceResponse;
 import android.webkit.WebSettings;
 import android.webkit.WebView;
 import android.webkit.WebViewClient;
+import android.widget.Button;
+import android.widget.LinearLayout;
+import android.widget.TextView;
 import android.widget.Toast;
 
-import androidx.webkit.WebViewAssetLoader;
-
 import java.io.OutputStream;
-import java.nio.charset.StandardCharsets;
 import java.lang.ref.WeakReference;
+import java.nio.charset.StandardCharsets;
 
 public final class MainActivity extends Activity {
-    private static final String HOME_URL =
-            "https://appassets.androidplatform.net/assets/index.html";
+    private static final String HOME_URL = "file:///android_asset/index.html";
     private static final int CREATE_DOCUMENT_REQUEST = 4021;
 
+    private LinearLayout root;
     private WebView webView;
     private String pendingFileData;
     private String pendingFileName;
@@ -40,75 +38,46 @@ public final class MainActivity extends Activity {
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-        configureSystemBars();
+
+        getWindow().setStatusBarColor(Color.rgb(3, 1, 4));
+        getWindow().setNavigationBarColor(Color.rgb(3, 1, 4));
+
+        root = new LinearLayout(this);
+        root.setOrientation(LinearLayout.VERTICAL);
+        root.setBackgroundColor(Color.rgb(3, 1, 4));
+        setContentView(root);
+
+        try {
+            createAndLoadWebView(savedInstanceState);
+        } catch (Throwable error) {
+            showDiagnosticScreen("The app could not start.", error);
+        }
+    }
+
+    private void createAndLoadWebView(Bundle savedInstanceState) {
+        if (webView != null) {
+            root.removeView(webView);
+            webView.destroy();
+        }
 
         webView = new WebView(this);
         webView.setBackgroundColor(Color.rgb(3, 1, 4));
-        setContentView(webView);
-        applyInsets();
-        configureWebView();
+        webView.setRendererPriorityPolicy(WebView.RENDERER_PRIORITY_IMPORTANT, false);
 
-        if (savedInstanceState == null || webView.restoreState(savedInstanceState) == null) {
-            webView.loadUrl(HOME_URL);
-        }
-    }
+        root.removeAllViews();
+        root.addView(
+                webView,
+                new LinearLayout.LayoutParams(
+                        LinearLayout.LayoutParams.MATCH_PARENT,
+                        LinearLayout.LayoutParams.MATCH_PARENT
+                )
+        );
 
-    private void configureSystemBars() {
-        Window window = getWindow();
-        window.setStatusBarColor(Color.TRANSPARENT);
-        window.setNavigationBarColor(Color.TRANSPARENT);
-
-        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.R) {
-            window.setDecorFitsSystemWindows(false);
-            WindowInsetsController controller = window.getInsetsController();
-            if (controller != null) {
-                controller.setSystemBarsAppearance(
-                        0,
-                        WindowInsetsController.APPEARANCE_LIGHT_STATUS_BARS
-                                | WindowInsetsController.APPEARANCE_LIGHT_NAVIGATION_BARS
-                );
-            }
-        } else {
-            window.getDecorView().setSystemUiVisibility(
-                    View.SYSTEM_UI_FLAG_LAYOUT_STABLE
-                            | View.SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN
-                            | View.SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION
-            );
-        }
-        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
-            window.setStatusBarContrastEnforced(false);
-            window.setNavigationBarContrastEnforced(false);
-        }
-    }
-
-    private void applyInsets() {
-        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.R) {
-            webView.setOnApplyWindowInsetsListener((view, insets) -> {
-                android.graphics.Insets bars = insets.getInsets(
-                        WindowInsets.Type.systemBars() | WindowInsets.Type.displayCutout()
-                );
-                view.setPadding(0, bars.top, 0, bars.bottom);
-                return insets;
-            });
-        } else {
-            webView.setOnApplyWindowInsetsListener((view, insets) -> {
-                view.setPadding(
-                        0,
-                        insets.getSystemWindowInsetTop(),
-                        0,
-                        insets.getSystemWindowInsetBottom()
-                );
-                return insets;
-            });
-        }
-    }
-
-    private void configureWebView() {
         WebSettings settings = webView.getSettings();
         settings.setJavaScriptEnabled(true);
         settings.setDomStorageEnabled(true);
         settings.setDatabaseEnabled(true);
-        settings.setAllowFileAccess(false);
+        settings.setAllowFileAccess(true);
         settings.setAllowContentAccess(false);
         settings.setMixedContentMode(WebSettings.MIXED_CONTENT_NEVER_ALLOW);
         settings.setSupportZoom(false);
@@ -116,24 +85,71 @@ public final class MainActivity extends Activity {
         settings.setDisplayZoomControls(false);
         settings.setMediaPlaybackRequiresUserGesture(true);
         settings.setTextZoom(100);
+        settings.setSafeBrowsingEnabled(true);
+        settings.setCacheMode(WebSettings.LOAD_DEFAULT);
 
         WebView.setWebContentsDebuggingEnabled(false);
-
-        WebViewAssetLoader assetLoader = new WebViewAssetLoader.Builder()
-                .addPathHandler(
-                        "/assets/",
-                        new WebViewAssetLoader.AssetsPathHandler(this)
-                )
-                .build();
-
-        webView.setWebViewClient(new LocalWebViewClient(assetLoader, this));
+        webView.setWebViewClient(new AtlasWebViewClient(this));
         webView.setWebChromeClient(new WebChromeClient());
         webView.addJavascriptInterface(new AppBridge(this), "CurrantApp");
+
+        boolean restored = savedInstanceState != null
+                && webView.restoreState(savedInstanceState) != null;
+        if (!restored) {
+            webView.loadUrl(HOME_URL);
+        }
+    }
+
+    private void showDiagnosticScreen(String title, Throwable error) {
+        String detail = error == null
+                ? "No diagnostic detail was provided."
+                : error.getClass().getName() + ": " + String.valueOf(error.getMessage());
+
+        root.removeAllViews();
+        root.setPadding(48, 72, 48, 48);
+
+        TextView heading = new TextView(this);
+        heading.setText(title);
+        heading.setTextColor(Color.rgb(247, 238, 249));
+        heading.setTextSize(24);
+        heading.setPadding(0, 0, 0, 24);
+        root.addView(heading);
+
+        TextView message = new TextView(this);
+        message.setText(
+                "Currant [Black] Atlas recovered instead of closing.\n\n"
+                        + detail
+                        + "\n\nTap Try Again. If it still fails, copy this diagnostic and send it to Ada."
+        );
+        message.setTextColor(Color.rgb(224, 180, 255));
+        message.setTextSize(16);
+        message.setPadding(0, 0, 0, 32);
+        root.addView(message);
+
+        Button retry = new Button(this);
+        retry.setText("Try Again");
+        retry.setOnClickListener(view -> {
+            try {
+                createAndLoadWebView(null);
+            } catch (Throwable retryError) {
+                showDiagnosticScreen("The app still could not start.", retryError);
+            }
+        });
+        root.addView(retry);
+
+        Button copy = new Button(this);
+        copy.setText("Copy Diagnostic");
+        copy.setOnClickListener(view -> {
+            ClipboardManager clipboard = (ClipboardManager) getSystemService(Context.CLIPBOARD_SERVICE);
+            clipboard.setPrimaryClip(ClipData.newPlainText("Currant Atlas diagnostic", detail));
+            Toast.makeText(this, "Diagnostic copied", Toast.LENGTH_SHORT).show();
+        });
+        root.addView(copy);
     }
 
     void beginTextExport(String fileName, String mimeType, String data) {
         pendingFileName = sanitizeFileName(fileName);
-        pendingMimeType = mimeType == null || mimeType.isBlank()
+        pendingMimeType = mimeType == null || mimeType.trim().isEmpty()
                 ? "text/plain"
                 : mimeType;
         pendingFileData = data == null ? "" : data;
@@ -150,15 +166,16 @@ public final class MainActivity extends Activity {
     }
 
     private static String sanitizeFileName(String value) {
-        if (value == null || value.isBlank()) return "currant-black-atlas-export.txt";
+        if (value == null || value.trim().isEmpty()) {
+            return "currant-black-atlas-export.txt";
+        }
         return value.replaceAll("[\\\\/:*?\"<>|]", "_");
     }
 
     void openExternalUrl(String url) {
-        if (url == null || url.isBlank()) return;
+        if (url == null || url.trim().isEmpty()) return;
         try {
-            Intent intent = new Intent(Intent.ACTION_VIEW, Uri.parse(url));
-            startActivity(intent);
+            startActivity(new Intent(Intent.ACTION_VIEW, Uri.parse(url)));
         } catch (ActivityNotFoundException error) {
             Toast.makeText(this, "No app can open this link.", Toast.LENGTH_SHORT).show();
         }
@@ -168,14 +185,17 @@ public final class MainActivity extends Activity {
     @SuppressWarnings("deprecation")
     protected void onActivityResult(int requestCode, int resultCode, Intent data) {
         super.onActivityResult(requestCode, resultCode, data);
-        if (requestCode != CREATE_DOCUMENT_REQUEST || resultCode != RESULT_OK
-                || data == null || data.getData() == null) {
+        if (requestCode != CREATE_DOCUMENT_REQUEST
+                || resultCode != RESULT_OK
+                || data == null
+                || data.getData() == null) {
             return;
         }
-        Uri target = data.getData();
-        try (OutputStream stream = getContentResolver().openOutputStream(target, "w")) {
+
+        try (OutputStream stream = getContentResolver().openOutputStream(data.getData(), "w")) {
             if (stream == null) throw new IllegalStateException("Unable to open destination");
-            stream.write(pendingFileData.getBytes(StandardCharsets.UTF_8));
+            stream.write((pendingFileData == null ? "" : pendingFileData)
+                    .getBytes(StandardCharsets.UTF_8));
             stream.flush();
             Toast.makeText(this, "Saved " + pendingFileName, Toast.LENGTH_SHORT).show();
         } catch (Exception error) {
@@ -189,31 +209,37 @@ public final class MainActivity extends Activity {
 
     @Override
     protected void onSaveInstanceState(Bundle outState) {
-        webView.saveState(outState);
+        if (webView != null) webView.saveState(outState);
         super.onSaveInstanceState(outState);
     }
 
     @Override
     protected void onPause() {
-        webView.onPause();
+        if (webView != null) webView.onPause();
         super.onPause();
     }
 
     @Override
     protected void onResume() {
         super.onResume();
-        webView.onResume();
+        if (webView != null) webView.onResume();
     }
 
     @Override
+    @SuppressWarnings("deprecation")
     public void onBackPressed() {
+        if (webView == null) {
+            super.onBackPressed();
+            return;
+        }
+
         webView.evaluateJavascript(
-                "(function(){if(document.body.classList.contains('menu-open')){" +
-                        "document.body.classList.remove('menu-open');return 'closed';}" +
-                        "return 'open';})()",
+                "(function(){if(document.body&&document.body.classList.contains('menu-open')){"
+                        + "document.body.classList.remove('menu-open');return 'closed';}"
+                        + "return 'open';})()",
                 result -> {
                     if ("\"closed\"".equals(result)) return;
-                    if (webView.canGoBack()) {
+                    if (webView != null && webView.canGoBack()) {
                         webView.goBack();
                     } else {
                         MainActivity.super.onBackPressed();
@@ -222,28 +248,15 @@ public final class MainActivity extends Activity {
         );
     }
 
-    private static final class LocalWebViewClient extends WebViewClient {
-        private final WebViewAssetLoader assetLoader;
+    private static final class AtlasWebViewClient extends WebViewClient {
         private final WeakReference<MainActivity> activityReference;
 
-        LocalWebViewClient(WebViewAssetLoader loader, MainActivity activity) {
-            assetLoader = loader;
+        AtlasWebViewClient(MainActivity activity) {
             activityReference = new WeakReference<>(activity);
         }
 
         @Override
-        public WebResourceResponse shouldInterceptRequest(
-                WebView view,
-                WebResourceRequest request
-        ) {
-            return assetLoader.shouldInterceptRequest(request.getUrl());
-        }
-
-        @Override
-        public boolean shouldOverrideUrlLoading(
-                WebView view,
-                WebResourceRequest request
-        ) {
+        public boolean shouldOverrideUrlLoading(WebView view, WebResourceRequest request) {
             return route(request.getUrl());
         }
 
@@ -254,11 +267,29 @@ public final class MainActivity extends Activity {
         }
 
         private boolean route(Uri uri) {
-            if ("appassets.androidplatform.net".equals(uri.getHost())) {
+            String scheme = uri.getScheme();
+            if ("file".equalsIgnoreCase(scheme) || "about".equalsIgnoreCase(scheme)) {
                 return false;
             }
+
             MainActivity activity = activityReference.get();
             if (activity != null) activity.openExternalUrl(uri.toString());
+            return true;
+        }
+
+        @Override
+        public boolean onRenderProcessGone(WebView view, RenderProcessGoneDetail detail) {
+            MainActivity activity = activityReference.get();
+            if (activity == null) return true;
+
+            activity.webView = null;
+            view.destroy();
+            activity.showDiagnosticScreen(
+                    detail.didCrash()
+                            ? "Android WebView stopped unexpectedly."
+                            : "Android reclaimed the WebView process.",
+                    new IllegalStateException("Renderer priority: " + detail.rendererPriorityAtExit())
+            );
             return true;
         }
     }
